--- a/packages/SystemUI/AndroidManifest.xml
+++ b/packages/SystemUI/AndroidManifest.xml
@@ -79,7 +79,7 @@
              TODO: Should have an android:permission attribute -->
         <service android:name=".screenshot.TakeScreenshotService"
             android:process=":screenshot"
-            android:exported="true" />
+            android:exported="false" />
 
         <service android:name=".LoadAverageService"
                 android:exported="true" />
